rendered/envs/friclu/argocd/ingress-argo-cd-argocd-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: argo-cd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.1.8
    helm.sh/chart: argo-cd-8.6.4
  name: argo-cd-argocd-server
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: argo.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - argo.duchardt.net
      secretName: argocd-server-tls
